objects/EUR_CRM_Store_Audit_Item__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Available_On_Shots_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initially for GB Phase 2 for Store Audit Items and Contract Builder</description>
        <label>Available On Shots Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bar_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>Store_Audit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>Store_Audit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Store Audit Item (EU)</relationshipLabel>
        <relationshipName>Store_Audit_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Champagne_by_Glass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Champagne by Glass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Check_Pouring_Rack__c</fullName>
        <label>Check Pouring Rack</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Commitment_to_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commitment to Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competition_Product_Listed__c</fullName>
        <label>Competition Product Listed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Competitior_Prod_Shelf_Placing__c</fullName>
        <label>Competitior Product Shelf Placing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stoop Zone</fullName>
                </value>
                <value>
                    <fullName>Eye Zone</fullName>
                </value>
                <value>
                    <fullName>Stretch Zone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Compliant_to_Listing_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliant to Listing Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Category__c</fullName>
        <label>Contract Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Taxonomy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Taxonomy</label>
        <referenceTo>EUR_CRM_Customer_Taxonomy__c</referenceTo>
        <relationshipName>Store_Audit_Items_Customer_Taxonomy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Displayed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Exclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_House_Pouring_Compliant__c</fullName>
        <label>House Pouring Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_House_Pouring_Mechanic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>House Pouring Mechanic</label>
        <referenceTo>EUR_CRM_Mechanic__c</referenceTo>
        <relationshipName>Store_Audit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_How_many_Cases__c</fullName>
        <label>How many Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indicator__c</fullName>
        <label>Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_New_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is New Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Promotion_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Promotion Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Kiosk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kiosk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Listing_Template_Compliant__c</fullName>
        <label>Listing Template Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Listing_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing Template</label>
        <referenceTo>EUR_CRM_JB_Template__c</referenceTo>
        <relationshipName>Store_Audit_Items_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Non_Listing_Template_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Listing Template Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Optics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Other_Competitor_Product__c</fullName>
        <label>Other Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Oversized_bottles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oversized bottles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POSM Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>Store Audit Item (EU)</relationshipLabel>
        <relationshipName>Store_Audit_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Presence_Check__c</fullName>
        <label>POS Presence Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Pouring_Type__c</fullName>
        <label>Pouring Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Prestige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reason_for_OOS__c</fullName>
        <label>Reason for OOS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Distributor blocking</fullName>
                </value>
                <value>
                    <fullName>Outlet blocking</fullName>
                </value>
                <value>
                    <fullName>Central office blocking</fullName>
                </value>
                <value>
                    <fullName>Virtual stock</fullName>
                </value>
                <value>
                    <fullName>Not in the listing</fullName>
                </value>
                <value>
                    <fullName>OOS at distributor</fullName>
                </value>
                <value>
                    <fullName>OOS at PRR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Regular_Price__c</fullName>
        <label>Regular Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Sales_Price__c</fullName>
        <label>Retail Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Store_Audit_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Seasonal_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seasonal Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Shelf_Placing__c</fullName>
        <label>Shelf Placing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stoop Zone</fullName>
                </value>
                <value>
                    <fullName>Eye Zone</fullName>
                </value>
                <value>
                    <fullName>Stretch Zone</fullName>
                </value>
                <value>
                    <fullName>Above Eye Level</fullName>
                </value>
                <value>
                    <fullName>Eye Level</fullName>
                </value>
                <value>
                    <fullName>Lower Level</fullName>
                </value>
                <value>
                    <fullName>Below Eye Level</fullName>
                </value>
                <value>
                    <fullName>Bottom Shelf</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>House Pouring</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Compliant__c</fullName>
        <label>Stock Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Status__c</fullName>
        <label>Stock Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stocked</fullName>
                </value>
                <value>
                    <fullName>Not Stocked</fullName>
                </value>
                <value>
                    <fullName>Commitment to Order</fullName>
                </value>
                <value>
                    <fullName>New Listing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_in_Bottles__c</fullName>
        <label>Stock in Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Store_Audit_Account__c</fullName>
        <formula>EUR_CRM_Store_Audit__r.EUR_CRM_Account__c</formula>
        <label>Store Audit Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Store_Audit__c</fullName>
        <label>Store Audit</label>
        <referenceTo>EUR_CRM_Store_Audit__c</referenceTo>
        <relationshipName>Store_Audit_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit__c</fullName>
        <description>It&apos;s created for record type EUR AO Off Trade Store Audit Item. (SFASSA-210, https://pernod-ricard-europe.atlassian.net/browse/SFASSA-210) on 20160222</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Drink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_per_Month_9L_Cases__c</fullName>
        <label>Volume per Month (9L Cases)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_per_Month__c</fullName>
        <label>Volume per Month</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Back_Bar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Bar_Display_Check__c</fullName>
        <label>Bar Display Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Drink_List_Check__c</fullName>
        <label>Drink List Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Drink_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drink List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_House_Pouring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>House Pouring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Listing_Check__c</fullName>
        <label>Listing Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Matching_Key__c</fullName>
        <label>Matching Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Minimum_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Number_of_Faces__c</fullName>
        <label>Number of Faces</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Out_of_Shelf_Check__c</fullName>
        <label>Out of Shelf Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Out_of_Shelf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Shelf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Out_of_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Price_Tag_Check__c</fullName>
        <label>Price Tag Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Price_Value_Check__c</fullName>
        <label>Price Value Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_JB_Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Store Audit Item (EU)</label>
    <listViews>
        <fullName>EUR_CRM_BG_Store_Audit_Item_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Store_Audit__c</columns>
        <columns>EUR_CRM_Listing_Template__c</columns>
        <columns>EUR_JB_Listed__c</columns>
        <columns>EUR_CRM_Pouring_Type__c</columns>
        <columns>EUR_CRM_Oversized_bottles__c</columns>
        <columns>EUR_CRM_Visibility__c</columns>
        <columns>EUR_CRM_Activation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit_Item__c.EUR_BG_Off_Trade_Store_Audit_Item,EUR_CRM_Store_Audit_Item__c.EUR_BG_On_Trade_Store_Audit_Item</value>
        </filters>
        <label>EUR BG Store Audit Item View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_Store_Audit_Items_All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Store_Audit__c</columns>
        <columns>EUR_CRM_Brand_Quality_Size__c</columns>
        <columns>EUR_JB_Listed__c</columns>
        <columns>EUR_JB_Drink_List__c</columns>
        <columns>EUR_JB_House_Pouring__c</columns>
        <columns>EUR_CRM_Is_New_Listing__c</columns>
        <columns>EUR_CRM_POS_Presence_Check__c</columns>
        <columns>EUR_CRM_Check_Pouring_Rack__c</columns>
        <columns>EUR_CRM_Bar_Card__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit_Item__c.EUR_FI_On_Trade_Store_Audit_Item</value>
        </filters>
        <label>All FI Store Audit Items</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_PT_Store_Audit_Item_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Brand_Quality__c</columns>
        <columns>EUR_CRM_Store_Audit__c</columns>
        <columns>EUR_CRM_Listing_Template__c</columns>
        <columns>EUR_CRM_Presence__c</columns>
        <columns>EUR_CRM_Visibility__c</columns>
        <columns>EUR_CRM_Activation__c</columns>
        <columns>EUR_CRM_Oversized_bottles__c</columns>
        <columns>EUR_CRM_Pouring_Type__c</columns>
        <columns>EUR_JB_Listed__c</columns>
        <columns>EUR_JB_Out_of_Shelf__c</columns>
        <columns>EUR_JB_Out_of_Stock__c</columns>
        <columns>EUR_CRM_Shelf_Placing__c</columns>
        <columns>EUR_JB_Number_of_Faces__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Store_Audit_Item__c.EUR_PT_Off_Trade_Store_Audit_Item,EUR_CRM_Store_Audit_Item__c.EUR_PT_On_Trade_Store_Audit_Item</value>
        </filters>
        <label>EUR PT Store Audit Item View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SAI-{0000000000}</displayFormat>
        <label>Store Audit Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Audit Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR AO Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR AO On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>AT On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BE On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wholesaler_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BE Wholesaler Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR BG On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR CH On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Off_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>DE Off Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_On_Trade_Store_Audit</fullName>
        <active>true</active>
        <label>DE On Trade Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Wholesaler_Store_Audit_Item</fullName>
        <active>true</active>
        <label>DE Wholesaler Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <description>Record Type for DK Off Trade Store Audit Item</description>
        <label>EUR DK OFF Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_ON_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <description>Record Type for DK ON Trade Store Audit Item</description>
        <label>EUR DK ON Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR FI On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_FS_Store_Audit</fullName>
        <active>true</active>
        <label>GB FS Store Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR KE Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR KE On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Distributor_Audit_Item</fullName>
        <active>true</active>
        <label>EUR MA Distributor Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR MA Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR MA On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR NG Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR NG On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR PT On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR RU On Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Off_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR ZA Off Trade Store Audit Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_On_Trade_Store_Audit_Item</fullName>
        <active>true</active>
        <label>EUR ZA On Trade Store Audit Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_if_EUR_CRM_Regular_Price_is_null</fullName>
        <active>true</active>
        <description>For DE Off trade, if Price monitoring is true, Regular Price should not be null</description>
        <errorConditionFormula>AND(
EUR_CRM_Store_Audit__r.EUR_CRM_Account__r.RecordTypeId = &quot;012L00000008gKs&quot;
, EUR_CRM_Store_Audit__r.EUR_CRM_Account__r.EUR_JB_Price_Monitoring__c = true,
ISNULL(EUR_CRM_Regular_Price__c)  )</errorConditionFormula>
        <errorDisplayField>EUR_CRM_Regular_Price__c</errorDisplayField>
        <errorMessage>Price check cannot be skipped when prince monitoring is enforced for the account</errorMessage>
    </validationRules>
</CustomObject>